# webapp-template

./: .bumpversion.toml  Makefile  README.md  README.md.jinja  copier.yml
api/: .gitignore  Dockerfile  Makefile.jinja  pyproject.toml  pyrightconfig.json
api/src/api/: __main__.py
api/src/api/lib/: config.py
api/src/api/lib/api/: errors.py  page.py
api/src/api/lib/api/models/: common.py  ping.py
api/src/api/lib/db/migrations/: __main__.py  migrate.py  migration.py
api/src/api/lib/db/migrations/schema/: m001_init.sql
api/src/api/lib/db/sql/: __init__.py  models.py
api/src/api/server/: __init__.py.jinja
api/src/api/server/routes/: __init__.py  ping.py
frontend/: Dockerfile  Makefile.jinja  default.conf  hey-api.ts  index.html  index.html.jinja  openapi-ts.config.ts  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx
frontend/src/components/: pingtable.tsx
frontend/src/lib/client/: client.gen.ts  sdk.gen.ts  types.gen.ts
scripts/: debug.sh  genlogo.sh  genmodels.sh
