[project]
name = "api"
version = "0.1.0"
description = "{{ project_description }}"
authors = [
    { name = "{{ author }}" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.10,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "environs (>=14.1.1,<15.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "sqlparse (>=0.5.3,<0.6.0)",
    "sqlmodel (>=0.0.23,<0.0.24)"
]

[tool.poetry]
packages = [{include = "api", from = "src"}]


[tool.poetry.group.dev.dependencies]
sqlacodegen = "^3.0.0"

[tool.poetry.scripts]
api = "api.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
